app/styles/main.css
*::selection {
  background: rgba(7, 7, 7, 1);
  color: rgba(240, 246, 248, 1);
}

html, body {
  height: 100%;
}

body {
  background-attachment: fixed;
  background-color: rgba(31, 35, 36, 1);
  background-image: url(../images/background.png);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  color: rgba(204, 216, 219, 1);
  font: 14px/18px "Proxima Nova",
                  "Lucida Grande",
                  "Lucida Sans Unicode",
                   Helvetica,
                   Arial,
                   Verdana,
                   sans-serif;
  margin: 0;
  overflow-x: hidden;
  overflow-y: scroll;
  text-rendering: optimizeLegibility;
}

#fork-me {
  height: 30px;
  overflow: hidden;
  position: absolute;
  right: -77px;
  top: -20px;
  transform: rotate(45deg);
  transform-origin: left top;
  width: 189px;
  z-index: 9007199254740991;
}

#fork-me img {
  margin-top: -34px;
  margin-left: 19px;
  transform: rotate(-45deg);
}

#grid,
#smoke {
  background-attachment: fixed;
  display: none;
  height: 100%;
  position: fixed;
  width: 100%;
  z-index: -2;
}

#grid {
  background-image: url(../images/grid.png);
  background-position: center top;
}

.points {
  background-image: url(../images/grid_point.png) !important;
}

#smoke {
  background-image: url(../images/smoke.png);
  background-position: left top;
  background-size: auto 100%;
}

main {
  display: block;
  padding: 72px;
  position: relative;
  margin: 0 auto -127px;
  min-height: calc(100% - 2 * 72px);
  transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
}

.image {
  color: rgba(0, 0, 0, 0);
  overflow: hidden;
  text-indent: 100%;
  white-space: nowrap;
}

header {
  position: relative;
  z-index: 2;
}

header .logo {
  /* background-image: url(../images/logo.svg); */
  display: block;
  float: left;
  height: 36px;
  margin-bottom: 24px;
  transform: scale(0.86);
  transform-origin: left center;
  transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
  width: 143px;
}

header .main.logo {
  transform: scale(1);
}

header .metrics {
  float: right;
  position: absolute;
  right: 0;
}

header .metric {
  display: inline-block;
  margin-right: 36px;
  text-align: right;
  transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
}

header .metric:last-of-type {
  margin-right: 0;
}

header .metric .value {
  font-family: "FF Din",
               "Proxima Nova",
               "Lucida Grande",
               "Lucida Sans Unicode",
                Helvetica,
                Arial,
                Verdana,
                sans-serif;
  font-size: 18px;
  font-weight: 300;
}

header nav {
  border-top: 1px solid rgba(204, 216, 219, 0.07);
  font-size: 0;
}

header nav ol {
  height: 35px;
  list-style: none;
  margin: 0;
  padding: 0;
}

header nav ol li {
  border-top: 1px solid rgba(0, 0, 0, 0);
  display: inline-block;
  height: 17px;
  padding-top: 18px;
  position: relative;
  margin-right: 36px;
  top: -1px;
  transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
}

header nav ol li.active {
  animation-direction: alternate;
  animation-duration: 1s;
  animation-name: nav-pulse;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  /* border-top: 1px solid rgba(107, 94, 62, 1); */
  border-top: 1px solid rgba(125, 114, 64, 1);
  opacity: 1;
}

header nav ol li.active a {
  opacity: 1;
}

a {
  color: inherit;
  text-decoration: none;
}

header nav a {
  font-size: 14px;
  font-weight: 300;
  opacity: 0.42;
  transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
}

header nav a:hover {
  opacity: 1;
}

header h1 {
  font-size: 18px;
  font-weight: 400;
  margin: 18px 0 0 0;
}

section {
  align-content: flex-start;
  align-items: center;
  display: flex;
  flex-flow: row wrap;
}

section h1 {
  font-size: 48px;
  font-weight: 300;
  line-height: normal;
}

section p:first-of-type {
  margin-top: 72px;
}

section p {
  font-size: 24px;
  font-weight: 100;
  line-height: normal;
  margin-bottom: 53px;
  margin-top: 0;
  max-width: 1317px;
  transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
  width: 100%;
}

section p.hero {
  font-size: 36px;
}

section p a.project {
  font-style: italic;
  font-weight: 300;
}

section p a.project:hover {
  color: rgba(125, 114, 64, 1);
  transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
}

section p strong {
  display: block;
  font-weight: 300;
}

section p:last-of-type {
  margin-bottom: calc(72px + 55px);
}

section p a.call-to-action {
  border: 2px solid rgba(204, 216, 219, 1);
  display: inline-block;
  font-size: 24px;
  overflow: hidden;
  padding: 18px;
  transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
  white-space: nowrap;
  width: 219.750px;
}

section p a.call-to-action:hover {
  background-color: rgba(125, 114, 64, 1);
  border-color: rgba(125, 114, 64, 1);
  color: rgba(31, 35, 36, 1);
  width: 250.406px;
}

section p a.call-to-action::after {
  content: '>';
  display: inline-block;
  font-family: "FF Din",
               "Proxima Nova",
               "Lucida Grande",
               "Lucida Sans Unicode",
                Helvetica,
                Arial,
                Verdana,
                sans-serif;
  margin-left: 6px;
  opacity: 0;
  transition: opacity 600ms cubic-bezier(0.23, 1, 0.32, 1);
}

section p a.call-to-action:hover::after {
  opacity: 1;
}

section p small {
  font-size: 18px;
}

footer {
  border-top: 1px solid rgba(204, 216, 219, 0.07);
  color: rgba(100, 105, 107, 1);
  font-weight: 300;
  margin: 0 72px 72px;
  padding-top: 18px;
  position: relative;
}

.clear:after {
  clear: both;
  content: "";
  display: table;
}

footer strong {
  display: block;
  font-size: 12px;
  font-weight: 600;
}

#contact {
  float: left;
}

#contact a {
  margin-right: 9px;
  transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
}

#contact a:hover {
  color: rgba(204, 216, 219, 1);
}

#copyright {
  float: right;
  position: absolute;
  right: 0;
  text-align: right;
  transition: all 600ms cubic-bezier(0.23, 1, 0.32, 1);
}

